fix(button-group): updating css rules to align button's icon

--- a/packages/styles/scss/components/buttongroup/_buttongroup.scss
+++ b/packages/styles/scss/components/buttongroup/_buttongroup.scss
@@ -57,8 +57,8 @@
     ::slotted([slot='icon']) {
       position: absolute;
       right: 1rem;
-      top: 13px;
-      bottom: 13px;
+      top: 50%;
+      transform: translateY(-50%);
       flex-shrink: 0;
     }
     .#{$prefix}--btn {
